Fix format of nav on mobile

--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -61,6 +61,7 @@
         }
 
         @media only screen and (max-width: $breakpoint5) {
+            align-items: center;
             display: none;
         }
     }
